--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.1",
     "styled-components": "^5.1.1"
   }
